Issue with top bar bing too long

--- a/app/assets/stylesheets/Index/MainIndex.scss
+++ b/app/assets/stylesheets/Index/MainIndex.scss
@@ -23,7 +23,8 @@ $InBetweenSearchIndexGrey: #F5F5F5;
 
 .IndexPage--Top__Sides{
     height:  150px;
-    width: 9999px;
+    width: 2903px;
+    //width: auto;
     border-bottom: 1px $BorderColor solid;
     border-top: 1px $BorderColor solid;
     
